[package]
name = "governor"
version = "0.1.2-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/antifuchs/governor"
repository = "https://github.com/antifuchs/governor.git"
readme = "README.md"
description = "A rate-limiting implementation in Rust"
documentation = "https://docs.rs/governor"
categories = ["algorithms", "network-programming", "concurrency", "no-std"]
keywords = ["rate-limiting", "rate-limit", "no_std", "gcra"]

# We use criterion, don't infer benchmark files.
autobenches = false


[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"

[package.metadata.template_ci.bench]
run = true
version = "stable"

[package.metadata.template_ci.additional_matrix_entries]

[package.metadata.template_ci.additional_matrix_entries.no_std_nightly]
run = true
version = "nightly"
commandline = "cargo +nightly test --no-default-features --features no_std"

[package.metadata.template_ci.additional_matrix_entries.no_std_stable]
run = true
version = "stable"
commandline = "cargo test --no-default-features --features no_std"

[badges]
circle-ci = { repository = "antifuchs/governor", branch = "master" }
maintenance = { status = "actively-developed" }

[[bench]]
name = "criterion"
harness = false

[dev-dependencies]
criterion = "0.2.11"
crossbeam = "0.7.3"
libc = "0.2.41"
futures = "0.3.1"
proptest = "0.9.4"
more-asserts = "0.2.1"

[features]
default = ["std"]
std = ["parking_lot", "evmap", "nonzero_ext/std", "futures-timer", "futures"]
no_std = []

[dependencies]
nonzero_ext = {version = "0.1.5", default-features = false}
parking_lot = {version = "0.9.0", optional = true}
evmap = {version = "6.0.0", optional = true}
futures-timer = {version = "2.0.0", optional = true}
futures = {version = "0.3.1", optional = true}
rand = "0.7.2"
